# clavifaber

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  devshell.nix  flake.nix  manifest  pftemlvurfr5kn7fgqfu3qhgaskofsba  result  skills.md
.beads/: config.yaml  metadata.json
scripts/: test-deployment-nspawn  test-deployment-sandbox  test-pki-lifecycle
src/: actors.rs  error.rs  gpg_agent.rs  identity.rs  lib.rs  main.rs  publication.rs  request.rs  ssh_key.rs  state.rs  util.rs  x509.rs  yggdrasil.rs
src/actors/: certificate_issuer.rs  gpg_agent_session.rs  host_identity.rs  publication_collector.rs  runtime_root.rs  ssh_host_key.rs  trace_recorder.rs  wifi_certificate.rs  yggdrasil_key.rs
tests/: actor_topology.rs  actor_trace.rs  certificate_validity_window.rs  converge.rs  forbidden_edges.rs  identity_directory_lifecycle.rs  issuance_idempotency.rs  publication_writing.rs  request_surface.rs  state_schema.rs
