[package]
name = "clavifaber"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "CriomOS host key-material provisioning tool."
license-file = "LICENSE.md"
repository = "https://github.com/LiGoldragon/clavifaber"
publish = false

[lib]
name = "clavifaber"
path = "src/lib.rs"

[[bin]]
name = "clavifaber"
path = "src/main.rs"

[dependencies]
der = { version = "0.7", features = ["alloc", "derive", "oid", "pem"] }
x509-cert = { version = "0.2", features = ["pem"] }
spki = { version = "0.7", features = ["alloc", "pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
pem-rfc7468 = { version = "0.7", features = ["alloc"] }
base64ct = { version = "1", features = ["alloc"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
const-oid = "0.9"
thiserror = "2"
nota-next  = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
kameo = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
